--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">  
+<html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +13,125 @@
     <!-- FontAwesome -->
     <script src="https://kit.fontawesome.com/938a18ead6.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
+    <!-- Section Block -->
+    <div class="container-fluid borderSection">
+        <div class="row borderRow"></div>
+        <div class="col-xs mx-auto">
+            <img class="aboutImg" src="assets/images/about.jpg">
+        </div>
+        <div class="container-fluid aboutSection">
+            <!-- Section About -->
+            <div class="container">
+                <div class="head">
+                    <h1 class="mainHeader">About</h1>
+                    <p>Our Timely Goal productivity app is an easy to use tool that helps you to build a routine of
+                        positive life changing habits, and
+                        planning your schedule to keep you on track. Our app allows you to set personal goals, track
+                        your progress, and keep you motivated.
+                    </p>
+                </div>
+                <div class="head">
+                    <h1 class="mainHeader">Goal</h1>
+                    <p>The primary goal is to help users to plan, focus, and create the results that they want in any
+                        area in their life.
+                        Our user friendly interface makes it simple and intuitive to use while users can stay effective,
+                        hit their target and get the best results.
+                    </p>
+                </div>
+                <div class="counter">
+                    <div class="row">
+                        <div class="col-xs mx-auto">
+                            <div class="one">
+                                <h3 >Set Personal Goals</h3>
+                            </div>
+                        </div>
+                        <div class="col-xs mx-auto">
+                            <div class="one">
+                                <h3 style="padding-top: 10px;"> Track Progress</h3>
+                            </div>
+                        </div>
+                        <div class="col-xs mx-auto">
+                            <div class="one">
+                                <h3 style="padding-top: 30px;">Motivations</h3>
+                            </div>
+                        </div>
+                        <div class="col-xs mx-auto">
+                            <div class="one">
+                                <h3 style="padding-top: 25px;">Positive Life</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Section Features & Benefits -->
+        <div class="container-fluid featureSection">
+            <div class="container"></div>
+            <h1 class="featureHeader">Features & Benefits</h1>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="section">
+                        <i class="fas fa-users-cog"></i>
+                        <h4 class="veryBoldText">Customization</h4>
+                        <h2 class="regularText">
+                            The app is fully customizable. You can fully customize goals, colors, and sounds.
+                        </h2>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="section">
+                        <i class="fas fa-tasks"></i>
+                        <h4 class="veryBoldText">Habit Management</h4>
+                        <h2 class="regularText">
+                            Create, complete, stop or pause your habits whenever it is convenient for you.
+                        </h2>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="section">
+                        <i class="fas fa-chart-line"></i>
+                        <h4 class="veryBoldText">Statistics</h4>
+                        <h2 class="regularText">
+                            Our statistic feature can track habits and analyze progress and keep the streak going.
+                        </h2>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="section">
+                        <i class="fas fa-bell"></i>
+                        <h4 class="veryBoldText">Reminders</h4>
+                        <h2 class="regularText">
+                            Set up recurring reminders for things you need to do (daily, weekly, monthly).
+                        </h2>
+                    </div>
+                </div>
+                <div class="clearfix"></div>
+                <div class="col-md-4">
+                    <div class="section">
+                        <i class="fas fa-comments"></i>
+                        <h4 class="veryBoldText">Suggestions</h4>
+                        <h2 class="regularText">
+                            Based on your statistics and previous time entries, the app will give you suggestions on how
+                            to perform better on tasks.
+                        </h2>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="section">
+                        <i class="fas fa-coins"></i>
+                        <h4 class="veryBoldText">Rewards</h4>
+                        <h2 class="regularText">
+                            Users can unlock the new features or earm points which can be redeemed for free food or
+                            drinks when they reach their target goals.
+                        </h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Research section -->
     <div class="container-fluid researchSection">
         <!-- Interview and survey section title -->
@@ -22,29 +141,29 @@
         </div>
         <!-- Research circles -->
         <div class="row circles">
-          <div class="col-xs researchCircle">
-            <h3 class="circleText">Procrastination & Motivation</h3>
-          </div>
-          <div class="col-xs researchCircle">
-            <h3 class="circleText">Time Management</h3>
-          </div>
-          <div class="col-xs researchCircle">
-            <h3 class="circleText">Focus</h3>
-          </div>
-          <div class="w-100"></div>
-          <!-- Research survey percents -->
-          <div class="col-xs stats">
-            <h4 class="veryBoldText">56%</h4>
-            <h2 class="regularText">are on their phones over 4 hours a day</h2>
-          </div>
-          <div class="col-xs stats">
-            <h4 class="veryBoldText">47%</h4>
-            <h2 class="regularText">use apps that help them on a daily basis</h2>
-          </div>
-          <div class="col-xs stats">
-            <h4 class="veryBoldText">59%</h4>
-            <h2 class="regularText">attend school and also work</h2>
-          </div>
+            <div class="col-xs researchCircle">
+                <h3 class="circleText">Procrastination & Motivation</h3>
+            </div>
+            <div class="col-xs researchCircle">
+                <h3 class="circleText">Time Management</h3>
+            </div>
+            <div class="col-xs researchCircle">
+                <h3 class="circleText">Focus</h3>
+            </div>
+            <div class="w-100"></div>
+            <!-- Research survey percents -->
+            <div class="col-xs stats">
+                <h4 class="veryBoldText">56%</h4>
+                <h2 class="regularText">are on their phones over 4 hours a day</h2>
+            </div>
+            <div class="col-xs stats">
+                <h4 class="veryBoldText">47%</h4>
+                <h2 class="regularText">use apps that help them on a daily basis</h2>
+            </div>
+            <div class="col-xs stats">
+                <h4 class="veryBoldText">59%</h4>
+                <h2 class="regularText">attend school and also work</h2>
+            </div>
         </div>
         <!-- Observation section title -->
         <div class="row sectionTitle">
@@ -54,9 +173,12 @@
         <!-- Observation quotes -->
         <div class="row observationQuotes">
             <ul class="observationDescription">
-                <p class="italicText">"Seeing the numbers of hours worked on each subject helps motivate me to continue..."</p>
-                <p class="italicText">"Encouraged me to do things out of my comfort zone... I feel more confident and productive."</p>
-                <p class="italicText">"It makes me feel like I am competing against myself which makes me want to work."</p>
+                <p class="italicText">"Seeing the numbers of hours worked on each subject helps motivate me to
+                    continue..."</p>
+                <p class="italicText">"Encouraged me to do things out of my comfort zone... I feel more confident and
+                    productive."</p>
+                <p class="italicText">"It makes me feel like I am competing against myself which makes me want to work."
+                </p>
             </ul>
         </div>
     </div>
@@ -68,17 +190,19 @@
             <div class="col-xs mx-auto">
                 <ul class="defineDescription">
                     <h4 class="veryBoldText">User Personas</h4>
-                    <h2 class="regularText">The user personas Kevin and Stephanie, are two examples of our targeted audience. Based on the research, students and busy adults are more likely to benefit from our app.</h2>
+                    <h2 class="regularText">The user personas Kevin and Stephanie, are two examples of our targeted
+                        audience. Based on the research, students and busy adults are more likely to benefit from our
+                        app.</h2>
                 </ul>
             </div>
             <br>
             <!-- User persona images -->
             <div class="col-xs mx-auto">
-                <img src="assets/images/kevinPersona.png">
+                <img class="personaImg" src="assets/images/kevinPersona.png">
             </div>
             <br>
             <div class="col-xs mx-auto">
-                <img src="assets/images/stephPersona.png">
+                <img class="personalImg" src="assets/images/stephPersona.png">
             </div>
         </div>
         <!-- Journey map section -->
@@ -87,7 +211,8 @@
             <div class="col-xs mx-auto">
                 <ul class="defineDescription">
                     <h4 class="veryBoldText">Journey Map</h4>
-                    <h2 class="regularText">The user persona, Kevin is used in this scenario. The journey map is useful in analyzing the user experience in a realistic situation.</h2>
+                    <h2 class="regularText">The user persona, Kevin is used in this scenario. The journey map is useful
+                        in analyzing the user experience in a realistic situation.</h2>
                 </ul>
             </div>
             <!-- Journey map image -->
@@ -99,10 +224,15 @@
         <br>
         <br>
     </div>
-    
-<!-- boostrap script -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+
+    <!-- boostrap script -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
