mockup img uploaded

--- a/index.html
+++ b/index.html
@@ -110,9 +110,7 @@
 
 <!-- Image Mockups -->
 <div class="container mockupdiv">
-    <div class="container">
-    <img src="assets/images/59 copy.jpg"  class="img-fluid" alt="Settings MockUp">
-    </div>
+    <img src="" alt="">
 </div>
 
 <!-- Credit Section -->
