--- a/index.html
+++ b/index.html
@@ -238,11 +238,37 @@
         <br>
         <br>
     </div>
+
+    <!-- Section Title -->
+<div class="sectionBox container">
+    <div class="textBox">
+        <h1 class="sectionHeader" style="color: #242080;">
+            FINAL
+        </h1>
+        <h4 class="sectionSubhead" style="color: #59B9B5; text-align: center;">
+            Final App and Mock Ups
+        </h4>
+    </div>
+
+</div>
+
 <!-- Image Mockups -->
 <img src="assets/images/Mockup img 3.jpg" class="img-fluid" alt="Mockup">
 <img src="assets/images/Mockup img 4.jpg" class="img-fluid" alt="Mockup">
 <img src="assets/images/Mockup img 5.jpg" class="img-fluid" alt="Mockup">
 
+<!-- Section Title -->
+<div class="sectionBox container">
+    <div class="textBox">
+        <h1 class="sectionHeader" style="color: #242080;">
+            CREDITS
+        </h1>
+        <h4 class="sectionSubhead" style="color: #59B9B5; text-align: center;">
+            Team Members and Roles
+        </h4>
+    </div>
+
+</div>
 
 <!-- Credit Section -->
 <div class="container-fluid creditBox d-flex justify-content-center">
