--- a/index.html
+++ b/index.html
@@ -24,9 +24,14 @@
 </head>
 
 <body>
-<<<<<<< HEAD
+
 <!-- Landing Image  -->
+<div>
+    <!-- <div class="container-fluid landingText">
+    <h1 class="sectionHeader " style="text-align: left; font-weight: bolder;">TRANSFORMING YOUR GOALS INTO REALITY.</h1>
+    </div> -->
 <img src="assets/images/Landing img.jpg" class="img-fluid" alt="TimelyGoals Mockup">
+</div>
 
     <!-- Section Block -->
     <div class="container-fluid borderSection">
@@ -143,10 +148,22 @@
                 </div>
             </div>
         </div>
+    </div>    
+
+<!-- Research Title -->
+<div class="sectionBox container">
+    <div class="textBox">
+        <h1 class="sectionHeader" style="color: #242080;">
+            RESEARCH
+        </h1>
+        <h4 class="sectionSubhead" style="color: #59B9B5; text-align: center;">
+            
+        </h4>
     </div>
-<<<<<<< HEAD
->>>>>>> 0f7e89ccd7dea70a526dfd9f172360891051d48d
-    <!-- Research section -->
+
+</div>
+
+<!-- Research section -->
     <div class="container-fluid researchSection">
         <!-- Interview and survey section title -->
         <div class="row sectionTitle">
@@ -196,6 +213,21 @@
             </ul>
         </div>
     </div>
+
+<!-- Define Title -->
+<div class="sectionBox container">
+    <div class="textBox">
+        <h1 class="sectionHeader" style="color: #242080;">
+            DEFINE
+        </h1>
+        <h4 class="sectionSubhead" style="color: #59B9B5; text-align: center;">
+            User Personas and Journey Map
+        </h4>
+    </div>
+
+</div>
+
+
     <!-- Define Section -->
     <div class="container-fluid defineSection">
         <!-- User persona section -->
@@ -239,7 +271,7 @@
         <br>
     </div>
 
-    <!-- Section Title -->
+    <!-- Final Title -->
 <div class="sectionBox container">
     <div class="textBox">
         <h1 class="sectionHeader" style="color: #242080;">
@@ -257,7 +289,7 @@
 <img src="assets/images/Mockup img 4.jpg" class="img-fluid" alt="Mockup">
 <img src="assets/images/Mockup img 5.jpg" class="img-fluid" alt="Mockup">
 
-<!-- Section Title -->
+<!-- credit Title -->
 <div class="sectionBox container">
     <div class="textBox">
         <h1 class="sectionHeader" style="color: #242080;">
@@ -271,8 +303,8 @@
 </div>
 
 <!-- Credit Section -->
-<div class="container-fluid creditBox d-flex justify-content-center">
-    <div class="container">
+<div class="container-fluid creditBox d-flex justify-content-center" style="margin: auto;">
+    <div class="container" style="margin: auto;">
         <h4 class="bda"> Bronco Design Agency</h4>
         <div class="row">
           <div class="col">
