--- a/index.html
+++ b/index.html
@@ -25,6 +25,41 @@
 
 <body>
 
+		<nav class="navbar navbar-expand-lg navbar-light navigationBar">
+			<a class="navbar-brand" href="index.html"><img class="logo" src=""></a>
+			
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="#about">About</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#research">Research</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#define">Define</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#ideate">Ideate</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#build">Build</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#final">Final</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#credits">Credits</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+
 <!-- Landing Image  -->
 <img src="assets/images/Landing img.jpg" class="img-fluid" alt="TimelyGoals Mockup">
 <!-- Section Block -->
@@ -37,7 +72,7 @@
         <!-- Section About -->
         <div class="container">
             <div class="head">
-                <h1 class="mainHeader">About</h1>
+                <h1 id="about" class="mainHeader">About</h1>
                 <p>Our Timely Goal productivity app is an easy to use tool that helps you to build a routine of
                     positive life changing habits, and
                     planning your schedule to keep you on track. Our app allows you to set personal goals, track
@@ -145,7 +180,7 @@
 </div>
 <div class="sectionBox container">
     <div class="textBox">
-        <h1 class="sectionHeader" style="color: #242080;">
+        <h1 id="research" class="sectionHeader" style="color: #242080;">
             Research
         </h1>
         <h4 class="sectionSubhead" style="color: #59B9B5; text-align: center;">
@@ -210,7 +245,7 @@
     <!-- Section title -->
     <div class="sectionBox container">
         <div class="textBox">
-            <h1 class="sectionHeader" style="color: #242080;">
+            <h1 id="define" class="sectionHeader" style="color: #242080;">
                 DEFINE
             </h1>
             <h4 class="sectionSubhead" style="color: #59B9B5; text-align: center;">
@@ -265,7 +300,7 @@
 <div class="container-fluid mappingBrainstorm">
     <div class="sectionBox container">
         <div class="textBox">
-            <h1 class="sectionHeader" style="color: #242080;">
+            <h1 id="ideate" class="sectionHeader" style="color: #242080;">
                 IDEATE
             </h1>
             <h4 class="sectionSubhead" style="color: #59B9B5; text-align: center;">
@@ -339,7 +374,7 @@
 <!-- Credit Title -->
 <div class="sectionBox container">
     <div class="textBox">
-        <h1 class="sectionHeader" style="color: #242080;">
+        <h1 id="build" class="sectionHeader" style="color: #242080;">
             BUILD
         </h1>
         <h4 class="sectionSubhead" style="color: #59B9B5; text-align: center;">
@@ -369,7 +404,7 @@
 <!-- Credit Title -->
 <div class="sectionBox container">
     <div class="textBox">
-        <h1 class="sectionHeader" style="color: #242080;">
+        <h1 id="final" class="sectionHeader" style="color: #242080;">
             FINAL
         </h1>
         <h4 class="sectionSubhead" style="color: #59B9B5; text-align: center;">
@@ -385,7 +420,7 @@
 <!-- Credit Title -->
 <div class="sectionBox container">
     <div class="textBox">
-        <h1 class="sectionHeader" style="color: #242080;">
+        <h1 id="credits" class="sectionHeader" style="color: #242080;">
             CREDITS
         </h1>
         <h4 class="sectionSubhead" style="color: #59B9B5; text-align: center;">
