--- a/index.html
+++ b/index.html
@@ -36,25 +36,25 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="#about">About</a>
+						<a class="nav-link" href="#about" style="color: white;">About</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#research">Research</a>
+						<a class="nav-link" href="#research" style="color: white;">Research</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#define">Define</a>
+						<a class="nav-link" href="#define" style="color: white;">Define</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#ideate">Ideate</a>
+						<a class="nav-link" href="#ideate" style="color: white;">Ideate</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#build">Build</a>
+						<a class="nav-link" href="#build" style="color: white;">Build</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#final">Final</a>
+						<a class="nav-link" href="#final" style="color: white;">Final</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#credits">Credits</a>
+						<a class="nav-link" href="#credits" style="color: white;">Credits</a>
 					</li>
 				</ul>
 			</div>
