--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 
 		<nav class="navbar navbar-expand-lg navbar-light navigationBar">
-			<a class="navbar-brand" href="index.html"><img class="logo" src=""></a>
+			<a class="navbar-brand" href="index.html"><img height="100px" width="auto" class="logo" src=""></a>
 			
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 				aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
