--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                 </ul>
             </div>
             <!-- information Architecture image -->
-            <div class="col-xs mx-auto">
+            <div class="col-xs ">
                 <img class="img-fluid" src="assets/images/mapchart.jpg">
             </div>
         </div>
